# Clove2d

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cursor/: .gitkeep  api-design.md  architecture.md  conventions.md  project-overview.md
.cursor/roadmap/: master-roadmap.md
.cursor/roadmap/v0.1.0/: checklist.md  (+7 more)
examples/: arabic_text.rs  arabic_text_debug.rs  basic_shapes.rs  complex_scene.rs  debug.rs  debug_layer.rs  debug_text.rs  english_text.rs  english_text_debug.rs  example_all_shapes.rs  example_colors_gradients.rs  example_complete_showcase.rs  example_images_filters.rs  example_layers_blend_modes.rs  example_text_comprehensive.rs  example_transforms.rs  gradients.rs  image_manipulation.rs  layers.rs  mixed_text.rs  multiline_advanced.rs  multiline_comprehensive.rs  multiple_fonts.rs
src/: error.rs  lib.rs  prelude.rs
src/backend/: mod.rs  renderer.rs  tiny_skia_backend.rs
src/canvas/: builder.rs  mod.rs  state.rs
src/color/: conversions.rs  gradient.rs  hsla.rs  mod.rs  named.rs  pattern.rs  rgba.rs
src/filter/: mod.rs
src/geometry/: bounds.rs  mod.rs  point.rs  rect.rs  size.rs
src/image/: formats.rs  image.rs  loader.rs  mod.rs
src/layer/: blend_modes.rs  mod.rs
src/shapes/: arc.rs  bezier.rs  circle.rs  ellipse.rs  line.rs  mod.rs  path.rs  polygon.rs  polyline.rs  rectangle.rs  rounded_rect.rs  star.rs  triangle.rs
src/text/: bidi.rs  font_manager.rs  line_break.rs  mod.rs  shaping.rs  text_builder.rs  text_layout.rs  text_style.rs
src/transform/: mod.rs
src/utils/: cache.rs  math.rs  mod.rs  validation.rs
(+29 files in other folders)
