[package]
name = "clove2d"
version = "0.1.1"
edition = "2021"
description = "A powerful 2D graphics library for Rust with support for shapes, text, images, filters, and layers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1he03/Clove2d"
keywords = ["graphics", "2d", "canvas", "drawing", "rendering"]
categories = ["graphics", "multimedia"]
readme = "README.md"

[dependencies]
tiny-skia = "0.11"
cosmic-text = "0.15.0"
rustybuzz = "0.20.1"
# rusttype = "0.9.3"
ttf-parser = "0.25.1"
unicode-bidi = "0.3.18"
image = "0.25.9"
thiserror = "2.0.17"
palette = "0.7.6"
euclid = "0.22.11"
kurbo = "0.13.0"
tokio = { version = "1.48.0", optional = true }
reqwest = { version = "0.12.24", optional = true }
once_cell = "1.21.3"
parking_lot = "0.12.5"
png = "0.18.0"
webp = "0.3.1"
unicode-segmentation = "1.12.0"
cssparser = "0.36.0"
regex = "1.12.2"
rayon = "1.11.0"
